src/test/deca/context/invalid/expr_cast_null_to_void.deca
// Test of the rule (3.39) : can't cast null to void.

{
	void var1;
	null var2;
	var1 = (void)(var2);
}

// Résultat :
//# a
